// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots With disabled prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
    disabled=""
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #F46152;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: #F78D82;
}

.c0:not([disabled]):active {
  background-color: unset;
  color: #F78D82;
}

.c0:disabled {
  background-color: unset;
  color: #9898A6;
}

<div>
  <button
    class="c0"
    disabled=""
  />
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #F46152;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: #F78D82;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: #9898A6;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
    disabled=""
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
    disabled=""
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #F46152;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: #F78D82;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: #9898A6;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F46152;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F78D82;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F46152;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #F46152;
  color: #FFFFFF;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F78D82;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: #F78D82;
}

.c0:not([disabled]):active {
  background-color: unset;
  color: #F78D82;
}

.c0:disabled {
  background-color: unset;
  color: #9898A6;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: #DBDBE8;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F46152;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F78D82;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c1 {
  background-color: transparent;
  border-color: #F46152;
  color: #F46152;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: #F78D82;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: #9898A6;
  color: #9898A6;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(255,255,255,0.3);
}

.c1:not([disabled]):active {
  border-color: #DBDBE8;
  color: #DBDBE8;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F46152;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #F78D82;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 1px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 1px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #F46152;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: #F78D82;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: #9898A6;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 1px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With variant prop should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #F46152;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: #F78D82;
}

.c0:not([disabled]):active {
  background-color: unset;
  color: #F78D82;
}

.c0:disabled {
  background-color: unset;
  color: #9898A6;
}

.c1 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #652CDB;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c1:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c1:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: unset;
  color: #8051E1;
}

.c1:not([disabled]):active {
  background-color: unset;
  color: #8051E1;
}

.c1:disabled {
  background-color: unset;
  color: #9898A6;
}

.c2 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #2B9486;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c2:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: unset;
  color: #3FA99B;
}

.c2:not([disabled]):active {
  background-color: unset;
  color: #3FA99B;
}

.c2:disabled {
  background-color: unset;
  color: #9898A6;
}

<div>
  <button
    class="c0"
  />
  <button
    class="c1"
  />
  <button
    class="c2"
  />
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #F46152;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: #F78D82;
}

.c0:not([disabled]):active {
  background-color: unset;
  color: #F78D82;
}

.c0:disabled {
  background-color: unset;
  color: #9898A6;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #F46152;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: #F78D82;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: #9898A6;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Open Sans;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c0:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #F46152;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(244,97,82,0.3);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: #F78D82;
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #9898A6;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;
